# bitbox-api-rs

./: CHANGELOG-npm.md  CHANGELOG-rust.md  Cargo.toml  LICENSE  Makefile  README-npm.md  README-rust.md  README.md  build.rs  ci.sh  index.html  webhid.js
.github/: README.md
.github/workflows/: deploy-sandbox.yml  rust.yml
assets/: bitbox_api_bg-039be141.wasm  bitbox_api_bg-061d5333.wasm  bitbox_api_bg-100ffc94.wasm  bitbox_api_bg-2cfff05b.wasm  bitbox_api_bg-5aed3103.wasm  bitbox_api_bg-7NtBnNo9.wasm  bitbox_api_bg-B2H341bZ.wasm  bitbox_api_bg-BViYK1Du.wasm  bitbox_api_bg-BaBWndjx.wasm  bitbox_api_bg-BhlOKlPA.wasm  bitbox_api_bg-BjJvHoDP.wasm  bitbox_api_bg-BjUqAzJz.wasm  bitbox_api_bg-BjVmax9j.wasm  bitbox_api_bg-BmSfAHWf.wasm  bitbox_api_bg-Bus0syXR.wasm  bitbox_api_bg-C1GRByy9.wasm  bitbox_api_bg-C7TPZa92.wasm  bitbox_api_bg-CDYUwDG-.wasm  bitbox_api_bg-CwoACbIR.wasm  bitbox_api_bg-D9a7HR62.wasm  bitbox_api_bg-DDPVknjR.wasm  bitbox_api_bg-DSJtQ85-.wasm  bitbox_api_bg-DTYldvjB.wasm  bitbox_api_bg-DbadcBJ4.wasm  bitbox_api_bg-DiI4fIvr.wasm  bitbox_api_bg-Dqh7L7fV.wasm  bitbox_api_bg-KA90Woxe.wasm  bitbox_api_bg-McRwAdTg.wasm  bitbox_api_bg-Qneh03Ch.wasm  bitbox_api_bg-b83afcf3.wasm  bitbox_api_bg-gmG5Wsau.wasm  bitbox_api_bg-vffdvdBI.wasm  index-0345eb47.js  index-34d13356.js  index-65b18581.js  index-7852be37.js  index-B0UDfdzI.js  index-B1J906fI.js  index-B97Ora65.css  index-BA-Waqeu.js  (+28 more)
examples/: btc_miniscript.rs  btc_sign_msg.rs  btc_sign_psbt.rs  btc_signtx.rs  cardano.rs  connect.rs  eth.rs  multithreaded.rs  simulator.rs  singlethreaded.rs
sandbox/: README.md  index.html  package-lock.json  package.json  vite.config.ts
sandbox/src/: Accordion.css  Accordion.tsx  App.css  App.tsx  Bitcoin.tsx  Cardano.tsx  Error.tsx  ErrorNotification.css  ErrorNotification.tsx  Ethereum.tsx  General.tsx  index.css
scripts/: build-protos.rs
src/: antiklepto.rs  btc.rs  cardano.rs  communication.rs  constants.rs  error.rs  eth.rs  keypath.rs  lib.rs  noise.rs  runtime.rs  shiftcrypto.bitbox02.rs  simulator.rs  u2fframing.rs  usb.rs  util.rs
src/wasm/: connect.rs  localstorage.rs  mod.rs  noise.rs  types.rs
tests/: .gitignore  simulator  simulator_tests.rs  simulators.json  test_btc.rs  test_btc_psbt.rs  test_cardano.rs  test_device.rs  test_eth.rs
tests/subtests/: mod.rs  test_btc_psbt.rs  test_cardano.rs
tests/util/: mod.rs
