[package]
name = "bitbox-api"
authors = ["Marko Bencun <benma@bitbox.swiss>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A library to interact with the BitBox02 hardware wallet"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hidapi = { version = "2.3", optional = true }
prost = "0.11"
semver = "1.0.17"
noise-protocol = "0.1"
noise-rust-crypto = "0.5.0"
base32 = "0.4.0"
zeroize = "1"
async-trait = "0.1.68"
byteorder = "1.3.2"
thiserror = "1.0"
hex = { version = "0.4" }
bitcoin = { version = "0.30.0", features = ["base64"] }
getrandom = { version = "0.2" }
rlp = { version = "0.5", optional = true }
serde_json = { version = "1.0" }
num-bigint = "0.4"

tokio = { version = "1", optional = true, features = ["time"] }
enum-assoc = { version = "1.1.0", optional = true }
wasm-bindgen = { version = "0.2.63" }
wasm-bindgen-futures = { version ="0.4.37" }
js-sys = { version = "0.3.64", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
web-sys = { version = "0.3.64", features = ["Storage", "Window"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
futures = { version = "0.3.28", default-features = false, features = ["executor"] }

[build-dependencies]
prost-build = { version = "0.11" }

[[example]]
name = "connect"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "btc_signtx"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "btc_sign_psbt"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "btc_miniscript"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "eth"
required-features = ["usb", "tokio/rt", "tokio/macros", "rlp"]

[profile.release]
# Reduce wasm binary size.
opt-level = 'z'
codegen-units = 1
lto = true

[features]
multithreaded = []
usb = ["dep:hidapi"]
wasm = [
  "dep:enum-assoc",
  "dep:js-sys",
  "serde",
  "dep:serde-wasm-bindgen",
  "dep:web-sys",
  # Reduces the secp256k1 precompute table to decrease the WASM binary
  # size significantly.
  "bitcoin/secp-lowmemory",
  "getrandom/js",
]

serde = [
  "hex/serde",
  "bitcoin/serde",
]
