[package]
name = "bitbox-api"
authors = ["Marko Bencun <benma@bitbox.swiss>"]
version = "0.1.8"
homepage = "https://bitbox.swiss/"
repository = "https://github.com/digitalbitbox/bitbox-api-rs/"
readme = "README-rust.md"
edition = "2021"
license = "Apache-2.0"
description = "A library to interact with the BitBox02 hardware wallet"
keywords = ["bitbox", "api", "bitcoin", "wasm"]
categories = ["api-bindings", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.68"
base32 = "0.4.0"
bitcoin = { version = "0.30.0", features = ["base64"] }
byteorder = "1.3.2"
getrandom = { version = "0.2" }
hex = { version = "0.4" }
noise-protocol = "0.1"
noise-rust-crypto = "0.5.0"
num-bigint = "0.4"
prost = "0.11"
semver = "1.0.17"
serde_json = { version = "1.0" }
thiserror = "1.0"
zeroize = "1"

enum-assoc = { version = "1.1.0", optional = true }
hidapi = { version = "2.3", optional = true }
js-sys = { version = "0.3.64", optional = true }
rlp = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
tokio = { version = "1", optional = true, features = ["time"] }
wasm-bindgen = { version = "0.2.63", optional = true }
wasm-bindgen-futures = { version ="0.4.37", optional = true }
web-sys = { version = "0.3.64", features = ["Storage", "Window"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
prost-build = { version = "0.11" }

[[example]]
name = "singlethreaded"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "multithreaded"
required-features = ["usb", "tokio/rt", "tokio/macros", "tokio/rt-multi-thread", "multithreaded"]

[[example]]
name = "btc_signtx"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "btc_sign_psbt"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "btc_miniscript"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[[example]]
name = "eth"
required-features = ["usb", "tokio/rt", "tokio/macros", "rlp"]

[[example]]
name = "cardano"
required-features = ["usb", "tokio/rt", "tokio/macros"]

[profile.release]
# Reduce wasm binary size.
opt-level = 'z'
codegen-units = 1
lto = true

[features]
# Implement Sync+Send for PairedBitBox and PairingBitBox.
# This may or may not cause trouble on macOS, see: https://github.com/libusb/hidapi/issues/503
multithreaded = []
usb = ["dep:hidapi"]
wasm = [
  "dep:enum-assoc",
  "dep:js-sys",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",

  "getrandom/js",

  "hex/serde",
  "bitcoin/serde",

  # Reduces the secp256k1 precompute table to decrease the WASM binary
  # size significantly.
  "bitcoin/secp-lowmemory",
]
